fix: No overflow on firefox/windows scroll

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 html {
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
